--- a/page_contacts/style.css
+++ b/page_contacts/style.css
@@ -30,11 +30,41 @@ body{
 	justify-content: space-evenly;
 	align-content: center ;
 }
+.menu :nth-child(3){
+	text-decoration: underline;
+	text-underline-position: under;
+	text-underline-offset: 20%;
+}
+.menuAdap{
+	display: none;
+	
+	/*box-shadow: 0px 0px 10px 2px #fff;
+	border-radius: 5%;*/
+}
+.cross{
+	width: 30px;
+
+	margin-top: 30px;
+
+	text-align: center;
+
+	display: none;
+
+	color: #fff;
+
+	transform: scale(1.5);
+
+	cursor: pointer;
+}
+.cross:hover{
+	transform: scale(2.5);
+}
 .language{
 	position: absolute;
 	margin: 15px 0 0 80%;
 
 	user-select: none;
+	-webkit-user-select: none;
 }
 .menu div, .language{
 	padding: 10px 15px 10px;
