--- a/page_my_works/style.css
+++ b/page_my_works/style.css
@@ -31,6 +31,11 @@ body{
 	justify-content: space-evenly;
 	align-content: center ;
 }
+.menu :nth-child(2){
+	text-decoration: underline;
+	text-underline-position: under;
+	text-underline-offset: 20%;
+}
 .language{
 	position: absolute;
 	margin: 15px 0 0 80%;
@@ -135,7 +140,7 @@ section{
 	height: 100%;
 
 	position: relative;
-	margin: 100px auto 50px;
+	margin: 100px auto 10px;
 
 	display: flex;
 	flex-wrap: wrap;
