--- a/style.css
+++ b/style.css
@@ -33,6 +33,11 @@ body{
 	justify-content: space-evenly;
 	align-content: center ;
 }
+.menu :nth-child(1){
+	text-decoration: underline;
+	text-underline-position: under;
+	text-underline-offset: 20%;
+}
 .language{
 	position: absolute;
 	margin: 15px 0 0 80%;
@@ -119,7 +124,7 @@ body{
 
 	transition: all 1s ease;
 }
-.slidersAndPic{
+.sliders{
 	width: 40%;
 
 	margin: 0px 0 150px 80px;
