--- a/page_my_works/style.css
+++ b/page_my_works/style.css
@@ -18,6 +18,9 @@ body{
 	display: flex;
 	flex-direction: column;
 }
+body :nth-child(2n):not(.menuAdap){
+	flex-direction: row-reverse ;
+}
 .menu{
 	position: absolute;
 	margin-top: 15px;
@@ -40,6 +43,8 @@ body{
 	position: absolute;
 	margin: 15px 0 0 80%;
 
+	-webkit-user-select: none;
+	-ms-user-select: none;
 	user-select: none;
 }
 .menu div, .language{
@@ -50,6 +55,78 @@ body{
 	transition: all .5s linear ;
 
 	border-radius: 60px;
+}
+.menuAdap{
+	display: none;
+
+	flex-direction: column;
+	flex-wrap: wrap;
+	align-items: center;
+
+	position: absolute;
+	top: 20px;
+	left: 40px;
+
+	width: 50px;
+	height: 60px;
+
+	background-color: black;
+
+	z-index: 5 ;
+
+	cursor: pointer;
+
+	transition: all .5s ease;
+	
+	/*box-shadow: 0px 0px 10px 2px #fff;
+	border-radius: 5%;*/
+}
+.strip{
+	width: 40px;
+	height: 10px;
+
+	margin-bottom: 4px;
+
+	background-color: #fff;
+
+	transition: all .5s ease;
+
+	animation: rotationStrip 5s ease infinite;
+}
+.cross{
+	width: 30px;
+
+	margin-top: 30px;
+
+	text-align: center;
+
+	display: none;
+
+	color: #fff;
+
+	transform: scale(1.5);
+
+	cursor: pointer;
+}
+.cross:hover{
+	transform: scale(2.5);
+}
+@keyframes rotationStrip{
+	from{
+		transform: rotate(0deg) ;
+	}
+	60%{
+		transform: rotate(180deg) ;
+	}
+}
+.menuAdap:hover .strip{
+	margin-bottom: 5px;
+}
+.menuAdap :nth-child(1){
+	margin-top: 10px;
+}
+.cross{
+	z-index: 6;
 }
 .yourName{
 	position: relative;
@@ -81,7 +158,7 @@ body{
 
 	transition: all .5s ease;
 
-	z-index:  5;
+	z-index:  4;
 }
 .gh{
 	text-decoration: underline ;
@@ -144,9 +221,6 @@ section{
 
 	display: flex;
 	flex-wrap: wrap;
-}
-body :nth-child(2n){
-	flex-direction: row-reverse ;
 }
 .title{
 	width: 100%;
