--- a/page_my_works/media.css
+++ b/page_my_works/media.css
@@ -209,6 +209,11 @@
 	.menuAdap{
 		display: flex;
 	}
+	body{
+		width: 100vw;
+		max-width: 100vw;
+		overflow-x: hidden;
+	}
 }
 @media (max-width: 425px){
 	.firstTitle{
