alpha 0.814813882 dead inside )R) R))R)S)R))D

--- a/page_my_works/media.css
+++ b/page_my_works/media.css
@@ -237,7 +237,9 @@
 	}
 
 	.underDivMan{
-		display: none;
+		display: inline-block;
+		width: 200px;
+		margin: 40% 20% ;
 	}
 }
 @media (max-width: 400px){
