--- a/page_my_works/media.css
+++ b/page_my_works/media.css
@@ -1,4 +1,8 @@
 @media (max-width: 1030px) {
+	.underDiv{
+		width: 100%;
+		margin-top: 40%;
+	}
 	.menu{
 		width:  50%;
 	}
@@ -232,7 +236,7 @@
 	}
 
 	.yourName{
-		width: 245%;
+		width: 265%;
 		transform: translate(-30%, 0) ;
 	}
 
