--- a/style.css
+++ b/style.css
@@ -163,21 +163,21 @@ body{
 	left: 130%;
 }
 .slider {
-    -webkit-appearance: none;  
+    -webkit-appearance: none;
     appearance: none;
 
-    width: 100%; 
+    width: 100%;
     height: 5px;
 
-    background: rgba(30, 30, 80); 
+    background: rgba(30, 30, 80);
 
     border-radius: 5px ;
 
-    outline: none; 
+    outline: none;
 
-    -webkit-transition: .2s; 
+    -webkit-transition: .2s;
     transition: opacity .2s;
-    
+
     cursor: pointer;
 }
 .slider:hover{
@@ -187,10 +187,10 @@ body{
     -webkit-appearance: none;
     appearance: none;
 
-    width: 25px; 
-    height: 25px; 
+    width: 25px;
+    height: 25px;
 
-    background: #fff; 
+    background: #fff;
 
   	border-radius: 15px ;
 }
@@ -237,8 +237,7 @@ body{
 
 	transition: all .5s ease;
 }
-.aristotle{
-	position: relative;
+.zeus{
 	margin: -40% auto 0;
 
 	transition: all .5s ease;
