--- a/style.css
+++ b/style.css
@@ -53,11 +53,83 @@ body{
 
 	border-radius: 60px;
 }
+.menuAdap{
+	display: none;
+
+	flex-direction: column;
+	flex-wrap: wrap;
+	align-items: center;
+
+	position: absolute;
+	top: 20px;
+	left: 40px;
+
+	width: 50px;
+	height: 60px;
+
+	background-color: black;
+
+	z-index: 5 ;
+
+	cursor: pointer;
+
+	transition: all .5s ease;
+
+	/*box-shadow: 0px 0px 10px 2px #fff;
+	border-radius: 5%;*/
+}
+.strip{
+	width: 40px;
+	height: 10px;
+
+	margin-bottom: 4px;
+
+	background-color: #fff;
+
+	transition: all .5s ease;
+
+	animation: rotationStrip 5s ease infinite;
+}
+.cross{
+	width: 30px;
+
+	margin-top: 30px;
+
+	text-align: center;
+
+	display: none;
+
+	color: #fff;
+
+	transform: scale(1.5);
+
+	cursor: pointer;
+}
+.cross:hover{
+	transform: scale(2.5);
+}
+@keyframes rotationStrip{
+	from{
+		transform: rotate(0deg) ;
+	}
+	60%{
+		transform: rotate(180deg) ;
+	}
+}
+.menuAdap:hover .strip{
+	margin-bottom: 5px;
+}
+.menuAdap :nth-child(1){
+	margin-top: 10px;
+}
+.cross{
+	z-index: 6;
+}
 .aboutMe{
 	color:  #fff;
 }
 .fieldForDrawing{
-	margin: 60px 0 20% 60%;
+	margin: -300px 0 20% 60%;
 
 	background-color: rgba(30, 30, 80, .2);
 
@@ -69,6 +141,10 @@ body{
 	opacity: .5 ;
 
 	transition: all 1s ease;
+
+	display: inline-block;
+	width: 400px;
+	height: 400px;
 }
 .part1, .part2{
 	background: url('pic/me.webp');
@@ -244,35 +320,33 @@ body{
 }
 .footer{
 	position: absolute;
+
 	display: flex;
+	justify-content: center;
 	align-items: center;
 
 	flex-direction: column ;
 
 	width: 100%;
-	height: 200px;
+	height: 150px;
 
 	background-color: rgba(30, 30, 80, .2);
 
 	border-radius: 20px;
 
-	margin: 100px 0 0;
+	margin: 150px 0 0;
 
 	clip-path: polygon(0 30%, 40% 0, 60% 0, 100% 30%, 100% 100%, 0 100%);
 
 	transition: all .5s ease;
 }
 .responsibility{
-	width: 80%;
+	width: 32%;
 	font-size: 1.2em;
-
-	margin-top: 80px;
 }
 .year{
 	width: 100px;
 	font-size: 2.5em;
-
-	margin-top: 30px;
 }
 .toUp{
 	width: 80px;
